@@ -1,0 +1,124 @@
+/* delve.cc
+ *
+ * ----START-LICENCE----
+ * Copyright 1999,2000 BrightStation PLC
+ * 
+ * This program is free software; you can redistribute it and/or 
+ * modify it under the terms of the GNU General Public License as 
+ * published by the Free Software Foundation; either version 2 of the
+ * License, or (at your option) any later version.
+ * 
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ * 
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307
+ * USA
+ * -----END-LICENCE-----
+ */
+
+#include <stdio.h>
+
+#include <om/om.h>
+#include <om/omstem.h>
+
+#include "../common/database.h"
+#include "../common/postlist.h"
+#include "../common/termlist.h"
+#include "../common/leafpostlist.h"
+
+#include <vector>
+#include <stack>
+#include <memory>
+
+int
+main(int argc, char *argv[])
+{
+    const char *progname = argv[0];
+    argv++;
+    argc--;
+    om_docid recno = 0;
+    om_termname term;
+    bool syntax_error = false;
+    while (argc && argv[0][0] == '-') {
+	if (argc >= 2 && strcmp(argv[0], "-r") == 0) {
+	    recno = atoi(argv[1]);
+	    argc -= 2;
+	    argv += 2;
+	} else if (argc >= 2 && strcmp(argv[0], "-t") == 0) {
+	    term = argv[1];
+	    argc -= 2;
+	    argv += 2;
+	} else {
+	    syntax_error = true;
+	    break;
+	}
+    }
+    
+    if (syntax_error || argc != 1) {
+	cout << "Syntax:\t" << progname << " -r <recno> <db>  for termlist\n";
+	cout << "or:\t" << progname << " -t <term> <db>  for posting list\n";
+	cout << "or:\t" << progname << " -t <term> -r <recno> <db> for position list\n";
+	exit(1);
+    }
+    try {
+	DatabaseBuilderParams params("auto");
+	params.paths.push_back(argv[0]);
+	DatabaseBuilder dbb;
+	IRDatabase *db = dbb.create(params);
+	
+	if (!term.empty()) {
+	    OmStem stemmer("english");	
+	    if (*(term.end() - 1) == '.') {
+		term = term.erase(term.size() - 1);
+	    } else {
+		term = stemmer.stem_word(term);
+	    }
+	    if (!db->term_exists(term)) {
+		cout << "term `" << term << "' not in database\n";
+		exit(0);
+	    }
+	    LeafPostList *plist = db->open_post_list(term);
+	    if (recno == 0) {
+		cout << "Posting List for term `" << term << "':";
+		plist->next(0);
+		while (!plist->at_end()) {
+		    cout << ' ' << plist->get_docid();
+		    plist->next(0);
+		}
+		cout << endl;
+	    } else {
+		plist->skip_to(recno, 0);
+		if (plist->at_end() || plist->get_docid() != recno) {
+		    cout << "term `" << term << "' doesn't index document #"
+			 << recno << endl;
+		    exit(0);
+		}
+		cout << "Position List for term `" << term
+		     << "', record #" << recno << ':';
+		PositionList *pl = plist->get_position_list();
+		pl->next();
+		while (!pl->at_end()) {
+		    cout << ' ' << pl->get_position();
+		    pl->next();
+		}
+		cout << endl;
+	    }
+	} else {
+	    LeafTermList *t = db->open_term_list(recno);
+	    cout << "Term List for record #" << recno << ':';
+	    t->next();
+	    while (!t->at_end()) {
+		cout << ' ' << t->get_termname();
+		t->next();
+	    }
+	    cout << endl;
+	}
+    }
+    catch (OmError &e) {
+	cout << e.get_msg() << endl;
+    }
+}
